<resources>
    <string name="app_name">NutriApp</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="result">Result</string>
    <string name="aktivitas">Kategori Aktivitas</string>
</resources>
